# LOSH-Reporter

./: .env.example  .gitignore  Dockerfile  README.md  TEMPLATE.md  data-fields.csv  docker-compose.yml  pyproject.toml  start-docker-fuseki.sh
fuseki/: docker-compose.yml
fuseki/configuration/: assembler.ttl  loshrdf.ttl
reporter/: cli.py  generator.py  templater.py
reporter/core/: errors.py  plotter.py  requester.py
reporter/tests/: generator.test.py  requester.test.py
reports/example/: query.json  styles.css  template.md
reports/losh2021/: query.rd  template.md
tests/: test_generator.py  test_requester.py
