[tool.poetry]
name = "losh-reporter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include="LOSH-Reporter", from=".." },{ include="reporter", from="." },
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
Mako = "^1.1.6"
matplotlib = "^3.5.1"
pandoc-fignos = "^2.4.0"
markdown-toc = "^1.2.6"
pandoc = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
